--- a/src/styles/main.module.scss
+++ b/src/styles/main.module.scss
@@ -23,3 +23,14 @@ html {
   font-family: "JosefinSans";
   src: url("../fonts/JosefinSans.ttf");
 }
+
+.main {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 100vh;
+}
+
+.container {
+  margin-top: 80px;
+}
