--- a/src/styles/menu.module.scss
+++ b/src/styles/menu.module.scss
@@ -16,7 +16,7 @@
   padding-left: 20px;
   font-family: "PTSans-Regular";
 
-  h1 {
+  p {
     letter-spacing: 1px;
     line-height: 45px;
     font-size: 20px;
