--- a/src/styles/about.module.scss
+++ b/src/styles/about.module.scss
@@ -30,7 +30,7 @@
       Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
     font-weight: 900;
     line-height: 90px;
-    text-transform: uppercase;
+    text-transform: lowercase;
     margin-left: 10px;
 
     //text-transform: uppercase;
